# hscript-C-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ast/: Expr.h  Interpreter.h  Parser.h
env/: Environment.h
lib/: ScriptLibs.cpp  ScriptLibs.h
test/: TestClass.h  TestExtendCppClass.hx  TestScript.hx  TestScriptChinese.hx
token/: Scanner.h  Token.h
type/: BaseClass.h  Dynamic.h  HClass.h
util/: ExceptionUtil.h
util/reflect/: Reflect.h
